Added the link to view the project.

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -31,7 +31,8 @@ const PROJECTS = [
     title: "Gestor de citas veterinarias",
     description:
       "El Gestor de citas veterinarias es una aplicación web diseñada para ayudar a las clínicas veterinarias a gestionar sus citas de forma eficiente. Con VAM, puede añadir, editar y eliminar fácilmente citas para diferentes mascotas, lo que garantiza un flujo de trabajo fluido para su clínica veterinaria.",
-    github: "https://github.com/TrujiDev/veterinary-appointment-manager",
+    link: "https://bright-biscotti-0f5ed4.netlify.app/",
+      github: "https://github.com/TrujiDev/veterinary-appointment-manager",
     image: "/projects/proyecto_veterinaria.webp",
     // tags: [TAGS.NEXT, TAGS.TAILWIND],
   },
