Actualizar componente Experience: agregar detalles de experiencia laboral y ajustar fechas

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,7 +2,13 @@
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
   {
-    date: "Actualmente...",
+    date: "Actualmente",
+    title: "Desarrollador Backend",
+    company: "Atomo Gaming",
+    description: "Como desarrollador backend, me encargo de crear microservicios con NestJS y administrarlos mediante contenedores Docker. Utilizo OpenLens para la supervisión y gestión de Kubernetes, garantizando un entorno escalable y confiable. Aunque no realizo todo el proceso de despliegue, uso GitHub Actions para generar imágenes de los microservicios y las publico en Amazon EKS, contribuyendo a un flujo de entrega continua y eficiente.",
+  },  
+  {
+    date: "2025",
     title: "Estudiante de Desarrollo de Software",
     company: "TalentoTech y Oracle",
     description: "Futuro graduado del Bootcamp de Programación de TalentoTech y del programa ONE de Oracle, especializándome en desarrollo backend con tecnologías como Java y Spring. Enfocado en adquirir habilidades en soluciones escalables y de alto rendimiento.",
@@ -14,7 +20,7 @@ const EXPERIENCE = [
     description: "Estudio varios cursos de desarrollo web, incluyendo JavaScript, TypeScript, Node.js, NestJS, y Docker, buscando fortalecer mis habilidades y conocimiento en el campo.",
   },
   {
-    date: "2023",
+    date: "Actualmente",
     title: "Estudiante de Programación",
     company: "SENA",
     description: "Participé en el programa de Análisis y Desarrollo de Software, donde adquirí conocimientos fundamentales en programación y desarrollo de software.",
